// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover Component Snapshots > renders Tailwind Popover correctly 1`] = `
{
  "Popover.tsx": "import React, { 
  createContext, 
  useContext, 
  useState, 
  useMemo, 
  useCallback 
} from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
  FloatingFocusManager,
  FloatingPortal,
  FloatingArrow,
  arrow,
  useMergeRefs,
  limitShift,
} from '@floating-ui/react';

export interface PopoverOptions {
  initialOpen?: boolean;
  placement?: Placement;
  modal?: boolean;
  open?: boolean;
  onOpenChange?: (open: boolean) => void;
  trigger?: 'click' | 'hover';
  offset?: number;
}

export function usePopover({
  initialOpen = false,
  placement = 'bottom',
  modal = false,
  open: controlledOpen,
  onOpenChange: setControlledOpen,
  trigger = 'click',
  offset: offsetValue = 8,
}: PopoverOptions = {}) {
  const [uncontrolledOpen, setUncontrolledOpen] = useState(initialOpen);
  const [arrowElement, setArrowElement] = useState<SVGSVGElement | null>(null);

  const open = controlledOpen ?? uncontrolledOpen;
  const setOpen = useCallback(
    (open: boolean) => {
      if (controlledOpen === undefined) {
        setUncontrolledOpen(open);
      }
      setControlledOpen?.(open);
    },
    [controlledOpen, setControlledOpen]
  );

  const data = useFloating({
    placement,
    open,
    onOpenChange: setOpen,
    whileElementsMounted: autoUpdate,
    middleware: [
      offset(offsetValue),
      flip({
        fallbackAxisSideDirection: 'end',
        padding: 5,
      }),
      shift({ padding: 5, limiter: limitShift() }),
      arrow({
        element: arrowElement,
      }),
    ],
  });

  const context = data.context;

  const click = useClick(context, {
    enabled: trigger === 'click',
  });
  const hover = useHover(context, {
    enabled: trigger === 'hover',
    handleClose: safePolygon(),
  });
  const dismiss = useDismiss(context);
  const role = useRole(context);

  const interactions = useInteractions([click, hover, dismiss, role]);

  return useMemo(
    () => ({
      open,
      setOpen,
      ...interactions,
      ...data,
      modal,
      arrowElement,
      setArrowElement,
    }),
    [open, setOpen, interactions, data, modal, arrowElement]
  );
}

type ContextType = ReturnType<typeof usePopover> | null;

const PopoverContext = createContext<ContextType>(null);

const usePopoverContext = () => {
  const context = useContext(PopoverContext);
  if (context == null) {
    throw new Error("Popover components must be wrapped in <Popover.Root />");
  }
  return context;
};

/**
 * Internal Popover Components
 */
const InternalRoot = ({
  children,
  ...options
}: {
  children: React.ReactNode;
} & PopoverOptions) => {
  const popover = usePopover(options);
  return (
    <PopoverContext.Provider value={popover}>
      {children}
    </PopoverContext.Provider>
  );
};

const InternalTrigger = React.forwardRef<
  HTMLElement,
  React.HTMLProps<HTMLElement> & { asChild?: boolean }
>(function PopoverTrigger({ children, asChild = false, className, ...props }, propRef) {
  const context = usePopoverContext();
  const childrenRef = (children as any).ref;
  const ref = useMergeRefs([context.refs.setReference, propRef, childrenRef]);

  if (asChild && React.isValidElement(children)) {
    return React.cloneElement(
      children,
      context.getReferenceProps({
        ref,
        ...props,
        ...children.props,
        "data-state": context.open ? "open" : "closed",
      })
    );
  }

  return (
    <button
      ref={ref}
      type="button"
      className={\`inline-flex items-center justify-center cursor-pointer focus:outline-none \${className || ''}\`}
      data-state={context.open ? "open" : "closed"}
      {...context.getReferenceProps(props)}
    >
      {children}
    </button>
  );
});

const InternalPortal = ({ children }: { children: React.ReactNode }) => (
  <FloatingPortal>{children}</FloatingPortal>
);

const InternalContent = React.forwardRef<
  HTMLDivElement,
  React.HTMLProps<HTMLDivElement>
>(function PopoverContent({ style, className, children, ...props }, propRef) {
  const { context: floatingContext, isPositioned, ...context } = usePopoverContext();
  const ref = useMergeRefs([context.refs.setFloating, propRef]);

  if (!floatingContext.open) return null;

  return (
    <FloatingFocusManager context={floatingContext} modal={context.modal}>
      <div
        ref={ref}
        style={{
          position: floatingContext.strategy,
          top: floatingContext.y ?? 0,
          left: floatingContext.x ?? 0,
          width: 'max-content',
          visibility: isPositioned ? 'visible' : 'hidden',
          ...style,
        }}
        className={\`
          z-50 min-w-[200px] rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none
          data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95
          data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2
          \${className || ''}
        \`}
        data-state={context.open && isPositioned ? "open" : "closed"}
        data-side={floatingContext.placement.split('-')[0]}
        {...context.getFloatingProps(props)}
      >
        {children}
      </div>
    </FloatingFocusManager>
  );
});

const InternalArrow = React.forwardRef<
  SVGSVGElement,
  React.SVGProps<SVGSVGElement>
>(function PopoverArrow({ className, ...props }, propRef) {
  const { context: floatingContext, setArrowElement } = usePopoverContext();
  const ref = useMergeRefs([setArrowElement, propRef]);

  return (
    <FloatingArrow
      ref={ref}
      context={floatingContext}
      className={\`fill-popover stroke-border \${className || ''}\`}
      strokeWidth={1}
      {...props}
    />
  );
});

const InternalClose = React.forwardRef<
  HTMLButtonElement,
  React.ButtonHTMLAttributes<HTMLButtonElement>
>(function PopoverClose(props, ref) {
  const { setOpen } = usePopoverContext();
  return (
    <button
      type="button"
      ref={ref}
      {...props}
      onClick={(event) => {
        props.onClick?.(event);
        setOpen(false);
      }}
    />
  );
});

export const PopoverRoot = InternalRoot;
export const PopoverTrigger = InternalTrigger;
export const PopoverPortal = InternalPortal;
export const PopoverContent = InternalContent;
export const PopoverArrow = InternalArrow;
export const PopoverClose = InternalClose;

/**
 * Popover - Main export with compound components
 */
export const Popover = Object.assign(PopoverRoot, {
  Root: PopoverRoot,
  Trigger: PopoverTrigger,
  Portal: PopoverPortal,
  Content: PopoverContent,
  Arrow: PopoverArrow,
  Close: PopoverClose,
});

export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;

exports[`Popover Component Snapshots > renders basic Popover correctly 1`] = `
{
  "Popover.module.css": ".trigger {
  all: unset;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.content {
  z-index: var(--popover-z-index, 50);
  background-color: var(--popover-background, var(--color-surface));
  border: 1px solid var(--popover-border, var(--color-border));
  border-radius: var(--popover-radius, var(--radius-md));
  box-shadow: var(--popover-shadow, 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05));
  padding: var(--popover-padding, calc(var(--spacing-unit) * 2));
  min-width: 200px;
  outline: none;
  transform-origin: var(--floating-ui-transform-origin);
}

.content[data-state='open'] {
  animation: popover-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
}

.content[data-state='closed'] {
  animation: popover-hide 100ms ease-in;
}

@keyframes popover-show {
  from {
    opacity: 0;
    transform: scale(0.96);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes popover-hide {
  from {
    opacity: 1;
    transform: scale(1);
  }
  to {
    opacity: 0;
    transform: scale(0.96);
  }
}

/* Directional Animations */
.content[data-placement^='top'][data-state='open'] {
  animation-name: popover-slide-down;
}
.content[data-placement^='bottom'][data-state='open'] {
  animation-name: popover-slide-up;
}
.content[data-placement^='left'][data-state='open'] {
  animation-name: popover-slide-right;
}
.content[data-placement^='right'][data-state='open'] {
  animation-name: popover-slide-left;
}

@keyframes popover-slide-up {
  from {
    opacity: 0;
    transform: translateY(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-down {
  from {
    opacity: 0;
    transform: translateY(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-left {
  from {
    opacity: 0;
    transform: translateX(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

@keyframes popover-slide-right {
  from {
    opacity: 0;
    transform: translateX(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

.item {
  padding: 8px 12px;
  cursor: pointer;
  border-radius: 4px;
  transition: background-color 0.2s;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 0.875rem;
}

.item:hover {
  background-color: var(--color-accent, #f3f4f6);
}

.separator {
  height: 1px;
  background-color: var(--color-border, #e5e7eb);
  margin: 4px 0;
}
",
  "Popover.tsx": "import React, { 
  createContext, 
  useContext, 
  useState, 
  useMemo, 
  useCallback 
} from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
  FloatingFocusManager,
  FloatingPortal,
  FloatingArrow,
  arrow,
  useMergeRefs,
  limitShift,
} from '@floating-ui/react';
import styles from './Popover.module.css';
export interface PopoverOptions {
  initialOpen?: boolean;
  placement?: Placement;
  modal?: boolean;
  open?: boolean;
  onOpenChange?: (open: boolean) => void;
  trigger?: 'click' | 'hover';
  offset?: number;
}

export function usePopover({
  initialOpen = false,
  placement = 'bottom',
  modal = false,
  open: controlledOpen,
  onOpenChange: setControlledOpen,
  trigger = 'click',
  offset: offsetValue = 8,
}: PopoverOptions = {}) {
  const [uncontrolledOpen, setUncontrolledOpen] = useState(initialOpen);
  const [arrowElement, setArrowElement] = useState<SVGSVGElement | null>(null);

  const open = controlledOpen ?? uncontrolledOpen;
  const setOpen = useCallback(
    (open: boolean) => {
      if (controlledOpen === undefined) {
        setUncontrolledOpen(open);
      }
      setControlledOpen?.(open);
    },
    [controlledOpen, setControlledOpen]
  );

  const data = useFloating({
    placement,
    open,
    onOpenChange: setOpen,
    whileElementsMounted: autoUpdate,
    middleware: [
      offset(offsetValue),
      flip({
        fallbackAxisSideDirection: 'end',
        padding: 5,
      }),
      shift({ padding: 5, limiter: limitShift() }),
      arrow({
        element: arrowElement,
      }),
    ],
  });

  const context = data.context;

  const click = useClick(context, {
    enabled: trigger === 'click',
  });
  const hover = useHover(context, {
    enabled: trigger === 'hover',
    handleClose: safePolygon(),
  });
  const dismiss = useDismiss(context);
  const role = useRole(context);

  const interactions = useInteractions([click, hover, dismiss, role]);

  return useMemo(
    () => ({
      open,
      setOpen,
      ...interactions,
      ...data,
      modal,
      arrowElement,
      setArrowElement,
    }),
    [open, setOpen, interactions, data, modal, arrowElement]
  );
}

type ContextType = ReturnType<typeof usePopover> | null;

const PopoverContext = createContext<ContextType>(null);

const usePopoverContext = () => {
  const context = useContext(PopoverContext);
  if (context == null) {
    throw new Error("Popover components must be wrapped in <Popover.Root />");
  }
  return context;
};

/**
 * Internal Popover Components
 */
const InternalRoot = ({
  children,
  ...options
}: {
  children: React.ReactNode;
} & PopoverOptions) => {
  const popover = usePopover(options);
  return (
    <PopoverContext.Provider value={popover}>
      {children}
    </PopoverContext.Provider>
  );
};

const InternalTrigger = React.forwardRef<
  HTMLElement,
  React.HTMLProps<HTMLElement> & { asChild?: boolean }
>(function PopoverTrigger({ children, asChild = false, ...props }, propRef) {
  const context = usePopoverContext();
  const childrenRef = (children as any).ref;
  const ref = useMergeRefs([context.refs.setReference, propRef, childrenRef]);

  if (asChild && React.isValidElement(children)) {
    return React.cloneElement(
      children,
      context.getReferenceProps({
        ref,
        ...props,
        ...children.props,
        "data-state": context.open ? "open" : "closed",
      })
    );
  }

  return (
    <button
      ref={ref}
      type="button"
      className={styles.trigger}
      data-state={context.open ? "open" : "closed"}
      {...context.getReferenceProps(props)}
    >
      {children}
    </button>
  );
});

const InternalPortal = ({ children }: { children: React.ReactNode }) => (
  <FloatingPortal>{children}</FloatingPortal>
);

const InternalContent = React.forwardRef<
  HTMLDivElement,
  React.HTMLProps<HTMLDivElement>
>(function PopoverContent({ style, className, children, ...props }, propRef) {
  const { context: floatingContext, isPositioned, ...context } = usePopoverContext();
  const ref = useMergeRefs([context.refs.setFloating, propRef]);

  if (!floatingContext.open) return null;

  return (
    <FloatingFocusManager context={floatingContext} modal={context.modal}>
      <div
        ref={ref}
        style={{
          position: floatingContext.strategy,
          top: floatingContext.y ?? 0,
          left: floatingContext.x ?? 0,
          width: 'max-content',
          visibility: isPositioned ? 'visible' : 'hidden',
          ...style,
        }}
        className={\`\${styles.content} \${className || ''}\`}
        data-state={context.open && isPositioned ? "open" : "closed"}
        data-placement={floatingContext.placement}
        {...context.getFloatingProps(props)}
      >
        {children}
      </div>
    </FloatingFocusManager>
  );
});

const InternalArrow = React.forwardRef<
  SVGSVGElement,
  React.SVGProps<SVGSVGElement>
>(function PopoverArrow(props, propRef) {
  const { context: floatingContext, setArrowElement } = usePopoverContext();
  const ref = useMergeRefs([setArrowElement, propRef]);

  return (
    <FloatingArrow
      ref={ref}
      context={floatingContext}
      fill="white"
      stroke="var(--popover-border)"
      strokeWidth={1}
      {...props}
    />
  );
});

const InternalClose = React.forwardRef<
  HTMLButtonElement,
  React.ButtonHTMLAttributes<HTMLButtonElement>
>(function PopoverClose(props, ref) {
  const { setOpen } = usePopoverContext();
  return (
    <button
      type="button"
      ref={ref}
      {...props}
      onClick={(event) => {
        props.onClick?.(event);
        setOpen(false);
      }}
    />
  );
});

export const PopoverRoot = InternalRoot;
export const PopoverTrigger = InternalTrigger;
export const PopoverPortal = InternalPortal;
export const PopoverContent = InternalContent;
export const PopoverArrow = InternalArrow;
export const PopoverClose = InternalClose;

/**
 * Popover - Main export with compound components
 */
export const Popover = Object.assign(PopoverRoot, {
  Root: PopoverRoot,
  Trigger: PopoverTrigger,
  Portal: PopoverPortal,
  Content: PopoverContent,
  Arrow: PopoverArrow,
  Close: PopoverClose,
});

export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;

exports[`Popover Component Snapshots > renders monolithic Popover correctly 1`] = `
{
  "Popover.module.css": ".trigger {
  all: unset;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.content {
  z-index: var(--popover-z-index, 50);
  background-color: var(--popover-background, var(--color-surface));
  border: 1px solid var(--popover-border, var(--color-border));
  border-radius: var(--popover-radius, var(--radius-md));
  box-shadow: var(--popover-shadow, 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05));
  padding: var(--popover-padding, calc(var(--spacing-unit) * 2));
  min-width: 200px;
  outline: none;
  transform-origin: var(--floating-ui-transform-origin);
}

.content[data-state='open'] {
  animation: popover-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
}

.content[data-state='closed'] {
  animation: popover-hide 100ms ease-in;
}

@keyframes popover-show {
  from {
    opacity: 0;
    transform: scale(0.96);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes popover-hide {
  from {
    opacity: 1;
    transform: scale(1);
  }
  to {
    opacity: 0;
    transform: scale(0.96);
  }
}

/* Directional Animations */
.content[data-placement^='top'][data-state='open'] {
  animation-name: popover-slide-down;
}
.content[data-placement^='bottom'][data-state='open'] {
  animation-name: popover-slide-up;
}
.content[data-placement^='left'][data-state='open'] {
  animation-name: popover-slide-right;
}
.content[data-placement^='right'][data-state='open'] {
  animation-name: popover-slide-left;
}

@keyframes popover-slide-up {
  from {
    opacity: 0;
    transform: translateY(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-down {
  from {
    opacity: 0;
    transform: translateY(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-left {
  from {
    opacity: 0;
    transform: translateX(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

@keyframes popover-slide-right {
  from {
    opacity: 0;
    transform: translateX(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

.item {
  padding: 8px 12px;
  cursor: pointer;
  border-radius: 4px;
  transition: background-color 0.2s;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 0.875rem;
}

.item:hover {
  background-color: var(--color-accent, #f3f4f6);
}

.separator {
  height: 1px;
  background-color: var(--color-border, #e5e7eb);
  margin: 4px 0;
}
",
  "Popover.tsx": "import React, { 
  createContext, 
  useContext, 
  useState, 
  useMemo, 
  useCallback 
} from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
  FloatingFocusManager,
  FloatingPortal,
  FloatingArrow,
  arrow,
  useMergeRefs,
  limitShift,
} from '@floating-ui/react';
import styles from './Popover.module.css';
export interface PopoverOptions {
  initialOpen?: boolean;
  placement?: Placement;
  modal?: boolean;
  open?: boolean;
  onOpenChange?: (open: boolean) => void;
  trigger?: 'click' | 'hover';
  offset?: number;
}

export function usePopover({
  initialOpen = false,
  placement = 'bottom',
  modal = false,
  open: controlledOpen,
  onOpenChange: setControlledOpen,
  trigger = 'click',
  offset: offsetValue = 8,
}: PopoverOptions = {}) {
  const [uncontrolledOpen, setUncontrolledOpen] = useState(initialOpen);
  const [arrowElement, setArrowElement] = useState<SVGSVGElement | null>(null);

  const open = controlledOpen ?? uncontrolledOpen;
  const setOpen = useCallback(
    (open: boolean) => {
      if (controlledOpen === undefined) {
        setUncontrolledOpen(open);
      }
      setControlledOpen?.(open);
    },
    [controlledOpen, setControlledOpen]
  );

  const data = useFloating({
    placement,
    open,
    onOpenChange: setOpen,
    whileElementsMounted: autoUpdate,
    middleware: [
      offset(offsetValue),
      flip({
        fallbackAxisSideDirection: 'end',
        padding: 5,
      }),
      shift({ padding: 5, limiter: limitShift() }),
      arrow({
        element: arrowElement,
      }),
    ],
  });

  const context = data.context;

  const click = useClick(context, {
    enabled: trigger === 'click',
  });
  const hover = useHover(context, {
    enabled: trigger === 'hover',
    handleClose: safePolygon(),
  });
  const dismiss = useDismiss(context);
  const role = useRole(context);

  const interactions = useInteractions([click, hover, dismiss, role]);

  return useMemo(
    () => ({
      open,
      setOpen,
      ...interactions,
      ...data,
      modal,
      arrowElement,
      setArrowElement,
    }),
    [open, setOpen, interactions, data, modal, arrowElement]
  );
}

type ContextType = ReturnType<typeof usePopover> | null;

const PopoverContext = createContext<ContextType>(null);

const usePopoverContext = () => {
  const context = useContext(PopoverContext);
  if (context == null) {
    throw new Error("Popover components must be wrapped in <Popover.Root />");
  }
  return context;
};

/**
 * Internal Popover Components
 */
const InternalRoot = ({
  children,
  ...options
}: {
  children: React.ReactNode;
} & PopoverOptions) => {
  const popover = usePopover(options);
  return (
    <PopoverContext.Provider value={popover}>
      {children}
    </PopoverContext.Provider>
  );
};

const InternalTrigger = React.forwardRef<
  HTMLElement,
  React.HTMLProps<HTMLElement> & { asChild?: boolean }
>(function PopoverTrigger({ children, asChild = false, ...props }, propRef) {
  const context = usePopoverContext();
  const childrenRef = (children as any).ref;
  const ref = useMergeRefs([context.refs.setReference, propRef, childrenRef]);

  if (asChild && React.isValidElement(children)) {
    return React.cloneElement(
      children,
      context.getReferenceProps({
        ref,
        ...props,
        ...children.props,
        "data-state": context.open ? "open" : "closed",
      })
    );
  }

  return (
    <button
      ref={ref}
      type="button"
      className={styles.trigger}
      data-state={context.open ? "open" : "closed"}
      {...context.getReferenceProps(props)}
    >
      {children}
    </button>
  );
});

const InternalPortal = ({ children }: { children: React.ReactNode }) => (
  <FloatingPortal>{children}</FloatingPortal>
);

const InternalContent = React.forwardRef<
  HTMLDivElement,
  React.HTMLProps<HTMLDivElement>
>(function PopoverContent({ style, className, children, ...props }, propRef) {
  const { context: floatingContext, isPositioned, ...context } = usePopoverContext();
  const ref = useMergeRefs([context.refs.setFloating, propRef]);

  if (!floatingContext.open) return null;

  return (
    <FloatingFocusManager context={floatingContext} modal={context.modal}>
      <div
        ref={ref}
        style={{
          position: floatingContext.strategy,
          top: floatingContext.y ?? 0,
          left: floatingContext.x ?? 0,
          width: 'max-content',
          visibility: isPositioned ? 'visible' : 'hidden',
          ...style,
        }}
        className={\`\${styles.content} \${className || ''}\`}
        data-state={context.open && isPositioned ? "open" : "closed"}
        data-placement={floatingContext.placement}
        {...context.getFloatingProps(props)}
      >
        {children}
      </div>
    </FloatingFocusManager>
  );
});

const InternalArrow = React.forwardRef<
  SVGSVGElement,
  React.SVGProps<SVGSVGElement>
>(function PopoverArrow(props, propRef) {
  const { context: floatingContext, setArrowElement } = usePopoverContext();
  const ref = useMergeRefs([setArrowElement, propRef]);

  return (
    <FloatingArrow
      ref={ref}
      context={floatingContext}
      fill="white"
      stroke="var(--popover-border)"
      strokeWidth={1}
      {...props}
    />
  );
});

const InternalClose = React.forwardRef<
  HTMLButtonElement,
  React.ButtonHTMLAttributes<HTMLButtonElement>
>(function PopoverClose(props, ref) {
  const { setOpen } = usePopoverContext();
  return (
    <button
      type="button"
      ref={ref}
      {...props}
      onClick={(event) => {
        props.onClick?.(event);
        setOpen(false);
      }}
    />
  );
});

/**
 * Popover - Monolithic wrapper for the compound components
 */
export const Popover: React.FC<PopoverOptions & { children: React.ReactNode }> = ({
  children,
  ...options
}) => {
  const childrenArray = React.Children.toArray(children);
  const trigger = childrenArray[0];
  const content = childrenArray.slice(1);

  return (
    <InternalRoot {...options}>
      <InternalTrigger asChild>{trigger}</InternalTrigger>
      <InternalPortal>
        <InternalContent>
          {content}
        </InternalContent>
      </InternalPortal>
    </InternalRoot>
  );
};

export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;
